2008-0-03 Jorg Schuler <jcsjcs at users.sourceforge.net>

	* src/display_itdb.c (gp_replace_itdb): fix memory leak. Thanks to
	  Andrea.

	* src/display_playlists.c (pm_button_press): block widgets during
	  eject. Thanks to Andrea for spotting this potential crash site.

2008-0-02 Jorg Schuler <jcsjcs at users.sourceforge.net>

	* src/file_itunesdb.c (gp_import_itdb): fix memory leak. Thanks to
	  Andrea.

	* src/prefs.c (prefs_get_cfgdir): fix possible memory leak. Thanks
	  to Andrea.

	* src/prefs.c (temp_prefs_load): fix memory leaks. Thanks to
	  Andrea.

	* src/misc.c (load_ipod_index_prefs): fix memory leaks. Thanks to
	  Andrea.

	* src/display_itdb.c (gp_itdb_extra_destroy): fix memory
	  leaks. Thanks to Andrea.

	* src/stock_icons.c (register_stock_icon): fix memory leak. Thanks
	  to Andrea.

	* src/display_photo.c (gphoto_album_selection_changed): fix memory
	  leak. Thanks to Andrea.

	* src/display_itdb.c (gp_track_extra_destroy): fix memory leaks.

2008-07-21 Jorg Schuler <jcsjcs at users.sourceforge.net>

	* src/misc_confirm (on_gtkpod_delete_event): return TRUE to
	  prevent other handlers from being called. (Tons of error
	  messages otherwise.)

2008-07-20 Paul Richardson <phantom_sf at users.sourceforge.net>

	* src/display_photo.c:
	Patch to stop photo action signals being added to actions
	multiple times. Thanks to Andrea.

2008-07-20 Jorg Schuler <jcsjcs at users.sourceforge.net>

	* src/fileselection.c
	  src/fileselection.h: restructure code. Thanks to Andrea.

2008-07-19 Jorg Schuler <jcsjcs at users.sourceforge.net>

	* src/file_itunesdb.c (data_changed): don't mark non-imported
          iPods as changed. Thanks to Andrea.

2008-07-19 Jorg Schuler <jcsjcs at users.sourceforge.net>

	* src/confirmation.c (gtkpod_confirmation): initialize
          <scrolled> variable. Thanks to Andrea.

2008-07-19 Jorg Schuler <jcsjcs at users.sourceforge.net>

	* src/display_playlists.c (pm_add_child): when adding